--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.plataform=postgres 5
-spring.datasource.url=jdbc:postgresql://localhost:5432/livraria
+spring.datasource.url=jdbc:postgresql://localhost:5432/livraria1
 spring.datasource.username=postgres
 spring.datasource.password=postegres
 
@@ -8,3 +8,4 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+api.security.token.secret = ${JWT_SECRET:my-secret-key}
